<resources>
    <string name="app_name">DrFruithy</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_article">Artikel</string>
    <string name="title_saved">Simpan</string>
    <string name="title_profile">Pengaturan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">App Title</string>
    <string name="image">image</string>
    <string name="image_article">Image Article</string>
    <string name="detect">Deteksi Sekarang</string>
    <string name="title_disease">Disease Title</string>
    <string name="disease_description">Disease description</string>
    <string name="see_all">Lihat Semua</string>
    <string name="guide">Panduan</string>
    <string name="guide_description">pelajari lebih lanjut untuk mengenal fitur yang ada di aplikasi ini</string>
    <string name="title_guide">Panduan</string>
    <string name="image_saved">image saved</string>
    <string name="title_saved_item">saved name</string>
    <string name="title_saved_text">Judul :</string>
    <string name="disease_name">Disease Name</string>
    <string name="disease_text">Penyakit :</string>
    <string name="username">username</string>
    <string name="email">   email</string>
    <string name="edit">edit</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Keluar</string>
    <string name="fruit">Fruit</string>
    <string name="tomato">Tomat</string>
    <string name="manggo">Mangga</string>
    <string name="apple">Apel</string>
    <string name="backbutton">backbutton</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="weclome">Selamat Datang</string>
    <string name="not_have_account">Tidak Punya Akun?</string>
    <string name="password_space">   Password</string>
    <string name="galery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="deskripsi">deskripsi</string>
    <string name="penanganan">penanganan</string>
    <string name="banana">Pisang</string>
    <string name="orange">Jeruk</string>
    <string name="grape">Anggur</string>
    <string name="analisis">Analisis</string>
    <string name="pengobatan">Pengobatan</string>
    <string name="title_menu_1">Pilih Buah</string>
    <string name="desc_menu_1">Pilih daun Buah yang akan didektesi, saat ini tersedia apel dan pisang.</string>
    <string name="learn_now">Analisis Sekarang</string>
    <string name="desc_menu_4">setelah analisis selesai, akan terlihat hasilnya. Dan bisa di simpan jika sudah memasukkan judulnya.</string>
    <string name="title_menu_4">Hasil Analisis</string>
    <string name="desc_menu_3">pada bagian kamera terdapat 2 fitur yakni fitur untuk memfokuskan kamera jika menekan area yang mau di deteksi, dan fitur senter untuk menerangkan area.</string>
    <string name="title_menu_3">kamera</string>
    <string name="desc_menu_2">masukkan gambar dari galeri ataupun dari kamera.</string>
    <string name="title_menu_2">masukkan gambar</string>
    <string name="simpan">Simpan</string>
    <string name="enter_title">masukkan judul</string>
    <string name="hapus">Hapus</string>
</resources>