<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_saved_card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/image_saved" />

            <TextView
                android:id="@+id/title_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="?android:textColorPrimary"
                android:layout_toEndOf="@+id/image_saved_card"
                android:text="@string/title_saved_text"/>

            <TextView
                android:id="@+id/title_saved_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/title_saved"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/title_saved_item"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                />

            <TextView
                android:id="@+id/disease_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/image_saved_card"
                android:text="@string/disease_text"
                android:textColor="?android:textColorPrimary"
                />


            <TextView
                android:id="@+id/disease_saved_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/disease_saved"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:text="@string/disease_name"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="80dp"
                app:cardCornerRadius="15dp">
                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:text="@string/hapus"
                    android:textStyle="bold"
                    android:textSize="11sp"
                    android:background="@color/red"
                    android:layout_toEndOf="@id/image_saved_card"
                    android:layout_gravity="end"
                    android:textColor="?android:textColorPrimary"
                    />


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>