<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.articleDetail.DetailArticleActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:gravity="center"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleMarginStart="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:title="@string/app_title"/>

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/backbutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/person"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/title_article"
                android:textAlignment="center"
                android:textColor="@color/navBack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deskripisi"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textStyle="normal"
                android:textColor="?android:textColorPrimary"
                android:textSize="15sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/teal_200"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/penangananImage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/penanganan"
                        android:contentDescription="@string/image_article" />

                    <TextView
                        android:id="@+id/penanganan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/penanganan"
                        android:textSize="15sp"
                        android:textColor="?android:textColorPrimary"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/navBack"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pengobatanimage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/pengobatan"
                        android:contentDescription="@string/image_article" />

                    <TextView
                        android:id="@+id/pengobatan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:text="@string/pengobatan"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="15sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
